Added asteroids and managed to inserts random asteroids on a random position

--- a/style.css
+++ b/style.css
@@ -18,3 +18,7 @@ button {
 #plane {
     background-image: url(images/plane.svg);
 }
+
+#obstacle {
+    background-image: url(images/asteroid.svg);
+}
