--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 #game-board {
-    text-align: center;
-    border: 2px solid black;
+    background-image: url(images/cloud-example.jpg);
 }
 
 .col {
-    height: 3rem;
+    height: 8rem;
     background-repeat: no-repeat;
     text-align: center;
     background-position: center;
