Added a new function that updates the score only when the plane managed to avoid an obstacle

--- a/style.css
+++ b/style.css
@@ -20,3 +20,7 @@ button {
 #obstacle {
     background-image: url(images/asteroid.svg);
 }
+
+#projectile {
+    background-image: url(images/missile.svg);
+}
